--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -15,7 +15,7 @@ cachetools==5.5.2
     # via
     #   -c requirements.txt
     #   google-auth
-certifi==2025.4.26
+certifi==2025.7.14
     # via
     #   -c requirements.txt
     #   requests
@@ -35,9 +35,9 @@ click==8.2.1
     # via
     #   -c requirements.txt
     #   typer
-coverage==7.8.2
+coverage==7.9.2
     # via pytest-cov
-defopt==6.4.0
+defopt==7.0.0
     # via
     #   -c requirements.txt
     #   hdx-python-api
@@ -66,7 +66,7 @@ frictionless==5.18.1
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
-google-auth==2.40.2
+google-auth==2.40.3
     # via
     #   -c requirements.txt
     #   google-auth-oauthlib
@@ -79,12 +79,12 @@ gspread==6.2.1
     # via
     #   -c requirements.txt
     #   hdx-python-scraper
-hdx-python-api==6.4.4
+hdx-python-api==6.4.5
     # via
     #   -c requirements.txt
     #   hdx-scraper-hno (pyproject.toml)
     #   hdx-python-scraper
-hdx-python-country==3.9.4
+hdx-python-country==3.9.6
     # via
     #   -c requirements.txt
     #   hdx-scraper-hno (pyproject.toml)
@@ -94,7 +94,7 @@ hdx-python-scraper==2.6.5
     # via
     #   -c requirements.txt
     #   hdx-scraper-hno (pyproject.toml)
-hdx-python-utilities==3.8.7
+hdx-python-utilities==3.8.8
     # via
     #   -c requirements.txt
     #   hdx-scraper-hno (pyproject.toml)
@@ -162,7 +162,7 @@ markdown-it-py==3.0.0
     # via
     #   -c requirements.txt
     #   rich
-marko==2.1.3
+marko==2.1.4
     # via
     #   -c requirements.txt
     #   frictionless
@@ -182,7 +182,7 @@ num2words==0.5.14
     # via
     #   -c requirements.txt
     #   quantulum3
-oauthlib==3.2.2
+oauthlib==3.3.1
     # via
     #   -c requirements.txt
     #   requests-oauthlib
@@ -192,12 +192,14 @@ openpyxl==3.1.5
     #   hdx-python-utilities
 packaging==25.0
     # via pytest
-petl==1.7.16
+petl==1.7.17
     # via
     #   -c requirements.txt
     #   frictionless
 pluggy==1.6.0
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-cov
 ply==3.11
     # via
     #   -c requirements.txt
@@ -216,7 +218,7 @@ pyasn1-modules==0.4.2
     # via
     #   -c requirements.txt
     #   google-auth
-pydantic==2.11.5
+pydantic==2.11.7
     # via
     #   -c requirements.txt
     #   frictionless
@@ -224,22 +226,23 @@ pydantic-core==2.33.2
     # via
     #   -c requirements.txt
     #   pydantic
-pygments==2.19.1
+pygments==2.19.2
     # via
     #   -c requirements.txt
+    #   pytest
     #   rich
 pyphonetics==0.5.3
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
-pytest==8.3.5
+pytest==8.4.1
     # via
     #   hdx-scraper-hno (pyproject.toml)
     #   pytest-check
     #   pytest-cov
 pytest-check==2.5.3
     # via hdx-scraper-hno (pyproject.toml)
-pytest-cov==6.1.1
+pytest-cov==6.2.1
     # via hdx-scraper-hno (pyproject.toml)
 python-dateutil==2.9.0.post0
     # via
@@ -278,7 +281,7 @@ regex==2024.11.6
     # via
     #   -c requirements.txt
     #   hdx-python-scraper
-requests==2.32.3
+requests==2.32.4
     # via
     #   -c requirements.txt
     #   ckanapi
@@ -303,7 +306,7 @@ rich==14.0.0
     # via
     #   -c requirements.txt
     #   typer
-rpds-py==0.25.1
+rpds-py==0.26.0
     # via
     #   -c requirements.txt
     #   jsonschema
@@ -312,7 +315,7 @@ rsa==4.9.1
     # via
     #   -c requirements.txt
     #   google-auth
-ruamel-yaml==0.18.11
+ruamel-yaml==0.18.14
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
@@ -347,7 +350,7 @@ sphinxcontrib-napoleon==0.7
     # via
     #   -c requirements.txt
     #   defopt
-structlog==25.3.0
+structlog==25.4.0
     # via
     #   -c requirements.txt
     #   libhxl
@@ -367,7 +370,7 @@ text-unidecode==1.3
     # via
     #   -c requirements.txt
     #   python-slugify
-typeguard==4.4.2
+typeguard==4.4.4
     # via
     #   -c requirements.txt
     #   inflect
@@ -375,7 +378,7 @@ typer==0.16.0
     # via
     #   -c requirements.txt
     #   frictionless
-typing-extensions==4.13.2
+typing-extensions==4.14.1
     # via
     #   -c requirements.txt
     #   frictionless
@@ -393,7 +396,7 @@ unidecode==1.4.0
     #   -c requirements.txt
     #   libhxl
     #   pyphonetics
-urllib3==2.4.0
+urllib3==2.5.0
     # via
     #   -c requirements.txt
     #   libhxl
@@ -406,7 +409,7 @@ wheel==0.45.1
     # via
     #   -c requirements.txt
     #   libhxl
-xlrd==2.0.1
+xlrd==2.0.2
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
@@ -418,7 +421,7 @@ xlsx2csv==0.8.4
     # via
     #   -c requirements.txt
     #   hdx-python-utilities
-xlsxwriter==3.2.3
+xlsxwriter==3.2.5
     # via
     #   -c requirements.txt
     #   tableschema-to-template
